--- a/estilos.css
+++ b/estilos.css
@@ -1,55 +1,54 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
+@charset utf="8";
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+
+img {
+    max-width: 100%;
 }
+
+video,
+audio {
+    max-width: 100%;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 .toptitle {
     font-family: 'Impact';
-    text-decoration: none; 
+    text-decoration: none;
     color: white;
 
     font-size: 16px;
@@ -59,19 +58,19 @@ table {
     padding-bottom: 10%;
 }
 
-h1{
-font-family: 'Impact';
+h1 {
+    font-family: 'Impact';
 
 }
 
-p1{
+p1 {
     font-family: 'Verdana';
 }
 
-.top{
+.top {
     background-color: black;
 
-    display: flex; 
+    display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-around;
@@ -79,13 +78,13 @@ p1{
 
     padding-top: 2%;
     padding-bottom: 2%;
-    
+
 }
 
 
 
-.logoBox{
-    display: flex; 
+.logoBox {
+    display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-evenly;
@@ -103,44 +102,44 @@ p1{
     margin-left: 5%;
 }
 
-.logo{
+.logo {
     margin-left: 10%;
     height: 70px;
-    
+
 }
 
 .bigText {
     font-family: 'Impact';
-    text-decoration: none; 
+    text-decoration: none;
     color: white;
 
     font-size: 32px;
 }
 
 .topItem {
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 
 }
 
-.topImage{
-   
+.topImage {
+
     width: 30px;
 }
 
 .queEs {
-   
-    background-image: url(/imagenes/antropoceno.jpg);
-    background-size:     cover;                     
-    background-repeat:   no-repeat;
+
+    background-image: url(imagenes/antropoceno.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
 }
 
-.articleTitle{
+.articleTitle {
     font-family: 'Impact';
-    text-decoration: none; 
+    text-decoration: none;
     color: white;
 
     font-size: 32px;
@@ -149,22 +148,22 @@ justify-content: space-between;
     padding-bottom: 5%;
 }
 
-.articleText{
+.articleText {
     font-family: 'Verdana';
-    text-decoration: none; 
+    text-decoration: none;
     color: white;
-    
+
 
     font-size: 16px;
     line-height: 1.4;
 
     text-align: center;
 
-    
+
 }
 
-.articleBox{
-    
+.articleBox {
+
     margin-left: 15%;
     margin-right: 15%;
 
@@ -173,10 +172,10 @@ justify-content: space-between;
 }
 
 .lineaDe {
-   
-    background-image: url(/imagenes/linea-de-tiempo.jpg);
-    background-size:     cover;                     
-    background-repeat:   no-repeat;
+
+    background-image: url(imagenes/linea-de-tiempo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
 
     padding-top: 6%;
@@ -184,10 +183,10 @@ justify-content: space-between;
 }
 
 .granAce {
-   
-    background-image: url(/imagenes/gran-aceleracion2.jpg);
-    background-size:     cover;                     
-    background-repeat:   no-repeat;
+
+    background-image: url(imagenes/gran-aceleracion2.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
 
     padding-top: 6%;
@@ -195,10 +194,10 @@ justify-content: space-between;
 }
 
 .impactosHum {
-   
-    background-image: url(/imagenes/impactos-humanos.jpg);
-    background-size:     cover;                     
-    background-repeat:   no-repeat;
+
+    background-image: url(imagenes/impactos-humanos.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
 
     padding-top: 6%;
@@ -206,10 +205,10 @@ justify-content: space-between;
 }
 
 .desarrolloSos {
-   
-    background-image: url(/imagenes/desarrollo-sostenible.jpg);
-    background-size:     cover;                     
-    background-repeat:   no-repeat;
+
+    background-image: url(imagenes/desarrollo-sostenible.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
 
     padding-top: 6%;
@@ -217,10 +216,10 @@ justify-content: space-between;
 }
 
 .recursosEdu {
-   
-    background-image: url(/imagenes/recusos-educativos-6.jpg);
-    background-size:     cover;                     
-    background-repeat:   no-repeat;
+
+    background-image: url(imagenes/recusos-educativos-6.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     background-position: center center;
 
     padding-top: 6%;
@@ -228,24 +227,24 @@ justify-content: space-between;
 }
 
 
-.aprendeTitle{
-font-family: Impact;
-color: white;
-font-size: 32px;
+.aprendeTitle {
+    font-family: Impact;
+    color: white;
+    font-size: 32px;
 
-padding-bottom: 10%;
+    padding-bottom: 10%;
 }
 
-.aprendeText{
-font-family: Verdana;
-font-size: 16;
-color: white;
-line-height: 1.8;
+.aprendeText {
+    font-family: Verdana;
+    font-size: 16;
+    color: white;
+    line-height: 1.8;
 
-text-align: justify;
+    text-align: justify;
 }
 
-.aprendeLeft{
+.aprendeLeft {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -254,7 +253,7 @@ text-align: justify;
     width: 50%;
 }
 
-.aprendeRight{
+.aprendeRight {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -265,7 +264,7 @@ text-align: justify;
     padding-left: 10%;
 }
 
-.aprendeIcon{
+.aprendeIcon {
     height: 15%;
     width: 53px;
 
@@ -274,24 +273,24 @@ text-align: justify;
 
 
 
-.aprendeBox{
-    display: flex; 
+.aprendeBox {
+    display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .boton {
-	
-	background-color:#0078be;
-	border-radius:40px;	
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Verdana;
-	font-size:16px;
-	font-weight:bold;
-	padding:30px 31px;
-	text-decoration:none;
+
+    background-color: #0078be;
+    border-radius: 40px;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Verdana;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 30px 31px;
+    text-decoration: none;
 }
