--- a/estilos.css
+++ b/estilos.css
@@ -301,7 +301,7 @@ p1 {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-around;
+    
     align-items: center;
 
     padding-top: 2%;
@@ -309,10 +309,17 @@ p1 {
 
 }
 
+.socialIcons{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
 .botImage {
 
     width: 50px;
-    padding-right: 7%;
+    height: 50px;
+    padding-right: 12%;
 }
 
 .botText{
@@ -330,13 +337,13 @@ p1 {
     justify-content: space-evenly;
     align-items: center;
 
-    width: 20%;
+    width: 40%;
     margin-right: 5%;
 }
 
 .socials {
     display: flex;
-
+    align-items: center;
     flex-direction: column;
     padding-left: 5%;
 }
