--- a/estilos.css
+++ b/estilos.css
@@ -34,6 +34,10 @@ section {
 
 body {
     line-height: 1;
+    color: #EEEEEE;
+    font-family: Verdana;
+    font-size: 16px;
+    background: #111111;
 }
 
 ol,
@@ -49,7 +53,7 @@ table {
 .toptitle {
     font-family: 'Impact';
     text-decoration: none;
-    color: white;
+    color: #FFFFFF;
 
     font-size: 16px;
 
@@ -58,17 +62,27 @@ table {
     padding-bottom: 10%;
 }
 
-h1 {
+.titulos{
     font-family: 'Impact';
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 24px;
+    padding-bottom: 16px;
+}
 
+h1 {
+    color: #EEEEEE;
+    font-family: 'Impact';
+    font-size: 24;
 }
 
 p1 {
     font-family: 'Verdana';
+    line-height: 2;
 }
 
 .top {
-    background-color: black;
+    background-color: #000000;
 
     display: flex;
     flex-direction: row;
@@ -97,21 +111,21 @@ p1 {
 
 .logoText {
     font-family: "Verdana";
-    color: white;
+    color: #FFFFFF;
 
     margin-left: 5%;
 }
 
 .logo {
     margin-left: 10%;
-    height: 70px;
+    height: 91px;
 
 }
 
 .bigText {
     font-family: 'Impact';
     text-decoration: none;
-    color: white;
+    color: #FFFFFF;
 
     font-size: 32px;
 }
@@ -126,7 +140,7 @@ p1 {
 
 .topImage {
 
-    width: 30px;
+    height: 48px;
 }
 
 .queEs {
@@ -265,8 +279,7 @@ p1 {
 }
 
 .aprendeIcon {
-    height: 15%;
-    width: 53px;
+    height: 78px;
 
     padding-bottom: 10%;
 }
@@ -287,7 +300,7 @@ p1 {
     background-color: #0078be;
     border-radius: 40px;
     cursor: pointer;
-    color: #ffffff;
+    color: #FFFFFF;
     font-family: Verdana;
     font-size: 16px;
     font-weight: bold;
@@ -317,15 +330,15 @@ p1 {
 
 .botImage {
 
-    width: 50px;
-    height: 50px;
+    width: 48px;
+    height: auto;
     padding-right: 12%;
 }
 
 .botText{
     font-family: Verdana;
-    color: white;
-    font-size: 25px;
+    color: #FFFFFF;
+    font-size: 24px;
 
     margin-bottom: 5%;
 }
@@ -341,18 +354,21 @@ p1 {
     margin-right: 5%;
 }
 
-.socials {
+.redes {
     display: flex;
     align-items: center;
     flex-direction: column;
     padding-left: 5%;
 }
 
-
-
-
 .logoBot{
     margin-left: 10%;
     height: 90px;
+
+}
+
+
+.texto{  
+    padding: 78px 110px 39px 110px;
 
 }
